--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,8 +14,8 @@
   },
  
 "scripts": {
-  "start": "NODE_OPTIONS=--openssl-legacy-provider your-start-script", 
-  "build": "NODE_OPTIONS=--openssl-legacy-provider your-build-script",
+  "start": "react-scripts start",
+  "build": "react-scripts build",
   "test": "react-scripts test",
   "eject": "react-scripts eject" 
   }, 
